hphp/hack/test/typecheck/union/arrays.php.exp
File "arrays.php", line 31, characters 3-13:
  vec<nothing>
File "arrays.php", line 32, characters 3-16:
  nothing
File "arrays.php", line 40, characters 3-13:
  vec<int>
File "arrays.php", line 41, characters 3-16:
  int
File "arrays.php", line 45, characters 3-13:
  vec<int>
File "arrays.php", line 46, characters 3-16:
  int
File "arrays.php", line 49, characters 3-13:
  vec<int>
File "arrays.php", line 50, characters 3-16:
  int
File "arrays.php", line 53, characters 3-13:
  vec<int>
File "arrays.php", line 54, characters 3-16:
  int
File "arrays.php", line 61, characters 3-13:
  vec<(int | string)>
File "arrays.php", line 62, characters 3-16:
  (int | string)
File "arrays.php", line 69, characters 3-13:
  vec<int>
File "arrays.php", line 70, characters 3-16:
  int
File "arrays.php", line 77, characters 3-13:
  vec<int>
File "arrays.php", line 78, characters 3-16:
  int
File "arrays.php", line 86, characters 3-13:
  vec<(int | string)>
File "arrays.php", line 87, characters 3-16:
  (int | string)
File "arrays.php", line 98, characters 3-13:
  dict<int, bool>
File "arrays.php", line 99, characters 3-16:
  bool
File "arrays.php", line 106, characters 3-13:
  dict<int, (bool | string)>
File "arrays.php", line 107, characters 3-16:
  (bool | string)
File "arrays.php", line 114, characters 3-13:
  dict<int, int>
File "arrays.php", line 115, characters 3-16:
  int
File "arrays.php", line 122, characters 3-13:
  dict<int, int>
File "arrays.php", line 123, characters 3-16:
  int
File "arrays.php", line 130, characters 3-13:
  dict<int, (int | string)>
File "arrays.php", line 131, characters 3-16:
  (int | string)
File "arrays.php", line 134, characters 3-13:
  dict<int, (bool | string)>
File "arrays.php", line 135, characters 3-16:
  (bool | string)
File "arrays.php", line 138, characters 3-13:
  dict<int, bool>
File "arrays.php", line 139, characters 3-16:
  bool
File "arrays.php", line 142, characters 3-13:
  dict<int, bool>
File "arrays.php", line 143, characters 3-16:
  bool
File "arrays.php", line 146, characters 3-13:
  dict<int, bool>
File "arrays.php", line 147, characters 3-16:
  bool
File "arrays.php", line 150, characters 3-13:
  dict<int, bool>
File "arrays.php", line 151, characters 3-16:
  bool
File "arrays.php", line 65, characters 20-21:
Invalid argument (Typing[4110])
  File "arrays.php", line 155, characters 34-36:
  Expected `int`
  File "arrays.php", line 59, characters 14-15:
  But got `string`
File "arrays.php", line 66, characters 23-24:
Invalid argument (Typing[4110])
  File "arrays.php", line 156, characters 37-42:
  Expected `string`
  File "arrays.php", line 57, characters 14-14:
  But got `int`
File "arrays.php", line 90, characters 20-21:
Invalid argument (Typing[4110])
  File "arrays.php", line 155, characters 34-36:
  Expected `int`
  File "arrays.php", line 84, characters 14-15:
  But got `string`
File "arrays.php", line 91, characters 23-24:
Invalid argument (Typing[4110])
  File "arrays.php", line 156, characters 37-42:
  Expected `string`
  File "arrays.php", line 82, characters 14-14:
  But got `int`
File "arrays.php", line 4, characters 16-16:
Wrong type hint (Typing[4338])
  File "arrays.php", line 4, characters 9-14:
  Expected `string`
  File "arrays.php", line 4, characters 20-20:
  But got `int`
